5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4367/executions/1771_1580.log
== TEST (2019-05-30 17:50:49) 
-- CODE:
from numpy import*
notas= array(eval(input("vetor notsas: ")))
alunos= input("vetor de alunos: ")

i=0
faltosos=0

while (i<= size(notas)):
	if (notas[i]==(-1)):
		faltosos= faltosos + 1
		i= i + 1
	else:
		i= i + 1
print(faltosos)

i2=0
aprovados=0
 while (i2<= size(notas)):
	if 
		
		
-- ERROR:
File "XXXX", line 18
    while (i2<= size(notas)):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:51:36) 
-- CODE:
from numpy import*
notas= array(eval(input("vetor notsas: ")))
alunos= input("vetor de alunos: ")

i=0
faltosos=0

while (i<= size(notas)):
	if (notas[i]==(-1)):
		faltosos= faltosos + 1
		i= i + 1
	else:
		i= i + 1
print(faltosos)

i2=0
aprovados=0
 while (i2<= size(notas)):
	if 
		
		
-- ERROR:
File "XXXX", line 18
    while (i2<= size(notas)):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:51:43) 
-- CODE:
from numpy import*
notas= array(eval(input("vetor notsas: ")))
alunos= input("vetor de alunos: ")

i=0
faltosos=0

while (i<= size(notas)):
	if (notas[i]==(-1)):
		faltosos= faltosos + 1
		i= i + 1
	else:
		i= i + 1
print(faltosos)

i2=0
aprovados=0
 
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
